# Zinnia

./: .editorconfig  .gitignore  .swiftformat  Cargo.toml  Makefile  Package.swift  Zinnia.crc.dylib  Zinnia.dylib  build-testing.sh  build.sh  chariz.txt  config.toml  control  mappins  postinst  strings.txt
.cargo/: config.toml
Sources/NomaePreferences/Extensions/: Color+RawRepresentable.swift
Sources/NomaePreferences/Preference/: Preference.swift
Sources/NomaePreferences/UIKit/: NomaePreferencesController.swift  PreferenceLoaderController.swift
Sources/NomaePreferences/Views/: ColorField.swift  Header.swift
Sources/Unused/UI/: QuickGlanceView.swift  Weather.swift
Sources/Zinnia/: DRM.swift  NeonEffect.swift  Network.swift  Tweak.swift  Tweak.x.swift  UIColor+stuff.swift  Weather.swift
Sources/Zinnia/Backends/: Automatic.swift  Libhooker.swift
Sources/Zinnia/DRM/: Authentication.swift  AuthorizationRequest.swift  AuthorizationTicket.swift  Encryption.swift  Handler.swift  PinningDelegate.swift  Sealing.swift  StringTable.swift  UserAgent.swift
Sources/ZinniaC/: Hook.m  Tweak.m  crap.x  libpddokdo.m
Sources/ZinniaPrefs/: NeonPrefsStuff.swift  PopupPreferences.swift  PreferencesView.swift  RootPreferences.swift  TimeDatePreferences.swift  UnlockPreferences.swift
Sources/ZinniaTweak/: Tweak.x.swift  Zinnia.swift
Sources/ZinniaUI/: Preferences.swift  SharedData.swift
checksuminator/: Cargo.toml
checksuminator/src/: main.rs
deb/: control.full  control.trial  postinst
res/: aiwass.der  aiwass.key.der  strings.plist  strings.txt
res/strings/: drm.production.plist  drm.staging.plist  main.plist
scripts/: build-drm-staging.sh  build-testing.sh  build-trial-testing.sh  build-trial.sh  build.sh  env.sh  setup-pinning.sh
tools/activator/: Cargo.toml  build.rs  cloudflare.pem  general.xml
tools/checksuminator/: Cargo.toml
tools/checksuminator/src/: crc.rs  encrypt_code.rs  main.rs  shuffle.rs  string_table.rs
tools/checksuminator/src/models/: key.rs  lookup.rs  mod.rs  strtab.rs
tools/checksuminator/src/passes/: checksum.rs  crc.rs  encrypt.rs  mod.rs  string_table.rs
tools/checksuminator/src/preprocess/: mod.rs  parser.rs  templates.rs
venusflytrap/: Cargo.toml  build.rs
venusflytrap/src/: authorize.rs  crc.rs  http.rs  lib.rs  main.rs  pin.rs  udid.rs  validate.rs
venusflytrap/udid/: version.m
zinniaprefs/: Makefile  Package.swift
zinniaprefs/Resources/: Info.plist  Root.plist
(+121 files in other folders)
