[package]
name = "venusflytrap"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.13.0"
chacha20poly1305 = "0.7.1"
deku = "0.12.0"
libaiwass = { path = "../../Aiwass/libaiwass" }
obfstr = "0.3.0"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"] }
