[package]
name = "venusflytrap"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.13.0"
chacha20poly1305 = "0.7.1"
core-foundation = "0.9.1"
deku = "0.12.0"
hex = "0.4.3"
libaiwass = { path = "../../Aiwass/libaiwass" }
libloading = "0.7.0"
obfstr = "0.3.0"
once_cell = "1.7.2"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0.64"
sha1 = "0.6.0"
sha2 = "0.9.3"
tokio = { version = "1.5.0", features = ["full"] }
uname = "0.1.1"
vint64 = "1.0.1"

[build-dependencies]
cc = "1.0.67"
