[package]
name = "venusflytrap"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.13.0"
chacha20poly1305 = "0.7.1"
chrono = "0.4.19"
core-foundation = "0.9.1"
deku = "0.12.0"
hex = "0.4.3"
include-crypt = { version = "0.1.0", default-features = false }
libaiwass = { path = "../../Aiwass/libaiwass" }
libloading = "0.7.0"
obfstr = "0.3.0"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "json"] }
rustls = { version = "0.19.1", features = ["dangerous_configuration"] }
rustls-pin = "0.1.2"
serde_json = "1.0.64"
sha1 = "0.6.0"
sha2 = "0.9.3"
static_init = "1.0.1"
tokio = { version = "1.5.0", features = ["full"] }
uname = "0.1.1"
vint64 = "1.0.1"
webpki-roots = "0.21.1"

[build-dependencies]
cc = "1.0.67"
