[package]
name = "checksuminator"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
blake3 = "0.3.7"
bytemuck = { version = "1.5.1", features = ["derive"] }
chacha20 = "0.6.0"
clap = "3.0.0-beta.2"
goblin = "0.4.0"
hex = "0.4.3"
plist = "1.1.0"
rand = "0.8.3"
regex = "1.4.6"
structopt = "0.3.21"
trim-in-place = "0.1.6"
